--- a/mac_and_cheese.html
+++ b/mac_and_cheese.html
@@ -13,37 +13,39 @@
 
 		<main>
       <figure>
-        <img src = "mac_and_cheese_photo.jpg" alt = "Photo of macaroni and cheese">
+        <img src = "img/mac_and_cheese_photo_crop_wide.jpg" alt = "Photo of macaroni and cheese">
         <figcaption>Photo by <a href = "https://unsplash.com/@hermez777?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Hermes Rivera</a> on <a href = "https://unsplash.com/photos/4qzaeR_sTYA">Unsplash</a></figcaption>
       </figure>
-     <p>Yield: 9 quarts, 50 servings</p>
-     <section>
-       <h2>Ingredients</h2>
-       <ul>
-         <li>3 pounds macaroni, (3 quarts plus 1 1/2 cups)</li>
-         <li>4 1/2 quarts evaporated milk</li>
-         <li>3 pounds American cheese</li>
-         <li>1 1/2 teaspoon dry mustard</li>
-         <li>1/8 teaspoon cayenne pepper</li>
-         <li>1 1/2 quart bread crumbs, (1 pound, 2 ounces)</li>
-         <li>1 1/2 cup butter, (3/4 pound)</li>
-         <li>paprika</li>
-       </ul>
-     </section>
-     <section>
-       <h2>Directions</h2>
-       <ol>
-         <li>Boil macaroni until just tender in a large amount of boiling water to which 3 tablespoons salt have been added</li>
-         <li>Drain and rinse</li>
-         <li>Scald milk over boiling water</li>
-         <li>Add cheese, that has been cut into small pieces, mustard and cayenne and continue cooking over boiling water until cheese is just melted</li>
-         <li>Combine macaroni and cheese sauce</li>
-          <li>Turn into buttered baking pans, cover with crumbs that have been thoroughly mixed with the melted butter</li>
-          <li>Sprinkle with paprika</li>
-          <li>Bake in a moderate oven (350° F) until crumbs are brown, about 25 minutes</li>
-        </ol>
-      </section>
+      <article>
+       <section>
+         <h2>Ingredients</h2>
+         <ul>
+           <li>3 pounds macaroni, (3 quarts plus 1 1/2 cups)</li>
+           <li>4 1/2 quarts evaporated milk</li>
+           <li>3 pounds American cheese</li>
+           <li>1 1/2 teaspoon dry mustard</li>
+           <li>1/8 teaspoon cayenne pepper</li>
+           <li>1 1/2 quart bread crumbs, (1 pound, 2 ounces)</li>
+           <li>1 1/2 cup butter, (3/4 pound)</li>
+           <li>paprika</li>
+         </ul>
+         <p>Yield: 9 quarts, 50 servings</p>
 
+       </section>
+       <section>
+         <h2>Directions</h2>
+         <ol>
+           <li>Boil macaroni until just tender in a large amount of boiling water to which 3 tablespoons salt have been added</li>
+           <li>Drain and rinse</li>
+           <li>Scald milk over boiling water</li>
+           <li>Add cheese, that has been cut into small pieces, mustard and cayenne and continue cooking over boiling water until cheese is just melted</li>
+           <li>Combine macaroni and cheese sauce</li>
+            <li>Turn into buttered baking pans, cover with crumbs that have been thoroughly mixed with the melted butter</li>
+            <li>Sprinkle with paprika</li>
+            <li>Bake in a moderate oven (350° F) until crumbs are brown, about 25 minutes</li>
+          </ol>
+        </section>
+      </article>
 		</main>
 
 		<footer>
