finish css styling

--- a/mac_and_cheese.html
+++ b/mac_and_cheese.html
@@ -9,6 +9,7 @@
 	<body>
 	  <header>
 		  <h1>Macaroni and Cheese</h1>
+      <p>Boil, bake, and serve!</p>
 		</header>
 
 		<main>
@@ -19,21 +20,21 @@
       <article>
        <section>
          <h2>Ingredients</h2>
-         <ul>
-           <li>3 pounds macaroni, (3 quarts plus 1 1/2 cups)</li>
-           <li>4 1/2 quarts evaporated milk</li>
-           <li>3 pounds American cheese</li>
-           <li>1 1/2 teaspoon dry mustard</li>
-           <li>1/8 teaspoon cayenne pepper</li>
-           <li>1 1/2 quart bread crumbs, (1 pound, 2 ounces)</li>
-           <li>1 1/2 cup butter, (3/4 pound)</li>
-           <li>paprika</li>
-         </ul>
          <p>Yield: 9 quarts, 50 servings</p>
-
+         <ul>
+           <li><input type = "checkbox"><span>3 pounds macaroni</span></li>
+           <li><input type = "checkbox"><span>4 1/2 quarts evaporated milk</span></li>
+           <li><input type = "checkbox"><span>3 pounds American cheese</span></li>
+           <li><input type = "checkbox"><span>1 1/2 teaspoon dry mustard</span></li>
+           <li><input type = "checkbox"><span>1/8 teaspoon cayenne pepper</span></li>
+           <li><input type = "checkbox"><span>1 1/2 quart bread crumbs</span></li>
+           <li><input type = "checkbox"><span>1 1/2 cup butter</span></li>
+           <li><input type = "checkbox"><span>Pinch paprika</span></li>
+         </ul>
        </section>
        <section>
          <h2>Directions</h2>
+         <p>Preheat oven to 350° F.</p>
          <ol>
            <li>Boil macaroni until just tender in a large amount of boiling water to which 3 tablespoons salt have been added</li>
            <li>Drain and rinse</li>
@@ -42,7 +43,7 @@
            <li>Combine macaroni and cheese sauce</li>
             <li>Turn into buttered baking pans, cover with crumbs that have been thoroughly mixed with the melted butter</li>
             <li>Sprinkle with paprika</li>
-            <li>Bake in a moderate oven (350° F) until crumbs are brown, about 25 minutes</li>
+            <li>Bake until crumbs are brown, about 25 minutes</li>
           </ol>
         </section>
       </article>
