--- a/mac_and_cheese.html
+++ b/mac_and_cheese.html
@@ -3,10 +3,12 @@
   <head>
 	  <meta charset="UTF-8" />
 		<title>Macaroni and Cheese</title>
-		<link href="css/style.css" rel="stylesheet" />
+    <link href="css/style.css" media = "screen" rel="stylesheet" />
+    <link href = "css/print.css" media = "print" rel = "stylesheet"/>
 	</head>
 
 	<body>
+    <div>
 	  <header>
 		  <h1>Macaroni and Cheese</h1>
       <p>Boil, bake, and serve!</p>
@@ -33,7 +35,7 @@
          </ul>
        </section>
        <section>
-         <h2>Directions</h2>
+         <h2>Direc tions</h2>
          <p>Preheat oven to 350° F.</p>
          <ol>
            <li>Boil macaroni until just tender in a large amount of boiling water to which 3 tablespoons salt have been added</li>
@@ -54,5 +56,6 @@
       <p>Author: Evaporated Milk Association</p>
       <p>Found on <a href = "https://publicdomainrecipes.org/recipes/macaroni-and-cheese/">Public Domain Recipes</a>.</p>
 		</footer>
+  </div>
 	</body>
 </html>
